--- a/recipes/harpy/meta.yaml
+++ b/recipes/harpy/meta.yaml
@@ -19,16 +19,19 @@ build:
     - {{ pin_subpackage('harpy', max_pin="x.x") }}
 
 requirements:
+  build:
+    - {{ compiler('cxx') }}
   host:
     - python =3.12
     - pip
   run:
-    - bcftools =1.19
+    - apptainer
+    - bcftools =1.20
     - pandas
     - python >3.10
     - rich-click
     - snakemake-minimal >7
-    - samtools
+    - samtools = 1.20
     - seqtk
     - tabix
 
